<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#09C"
    android:padding="@dimen/widget_margin"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/lnUp"
        style="@style/AppWidgetSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            style="@style/AppWidgetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvID"
            style="@style/AppWidgetText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvID"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnDown"
        style="@style/AppWidgetSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnUp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            style="@style/AppWidgetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelResfresh" />


        <TextView
            android:id="@+id/tvRefresh"
            style="@style/AppWidgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_count_format"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <Button
        android:id="@+id/bnRefresh"
        style="@style/AppWidgetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnDown"
        android:layout_centerHorizontal="true"
        android:text="@string/bnRefresh" />

</RelativeLayout>